添加所有class的包名