@@ -1,8 +1,11 @@
-class Solution {
+package com.solution._0012;
+import change.datastructure.*;
+import java.util.*;
+public class Solution {
     public String intToRoman(int num) {
         List<String> cs
-            = List.of("M", "CM", "D", "CD", "C", "XC", "L", "XL", "X", "IX", "V", "IV", "I");
-        List<Integer> vs = List.of(1000, 900, 500, 400, 100, 90, 50, 40, 10, 9, 5, 4, 1);
+            = Arrays.asList("M", "CM", "D", "CD", "C", "XC", "L", "XL", "X", "IX", "V", "IV", "I");
+        List<Integer> vs = Arrays.asList(1000, 900, 500, 400, 100, 90, 50, 40, 10, 9, 5, 4, 1);
         StringBuilder ans = new StringBuilder();
         for (int i = 0, n = cs.size(); i < n; ++i) {
             while (num >= vs.get(i)) {
